--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,7 @@ body{
 
 .content{
     background: white;
-    width: 960px;
-    margin: 0px 60px 0px 280px;
+    max-width: 960px;
 }
 
 h1, h4{
@@ -166,4 +165,47 @@ footer{
 footer::after{
     color: white;
     content: "Copyright ©";
-}\
+}
+
+@media screen and (max-width: 980px) {
+    .container {
+        max-width: 960px;
+    }
+    .content{
+        width: 90%;
+        margin: 0 60px 0 40px;
+    }
+    nav{
+        margin-right:40px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        width: 100%;
+        margin: 0;
+    }
+    .container{
+        margin-right:40px;
+    }
+    #header {
+        width: 100%;
+    }
+    nav{
+        margin-right: 40px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .content {
+        width: 100%;
+        margin: 0;
+    }
+    #myName{
+        width: 100%;
+    }
+    nav{
+        width: 100%;
+        float: none;
+    }
+}
